WIP - Gestion des parties et des patients

--- a/package.json
+++ b/package.json
@@ -33,27 +33,29 @@
         "watch:icons": "onchange src/assets/icons/*.{svg} -- npm run build:icons && npm run build:sprite",
         "build": "npm-run-all clean copy build:*",
         "dev": "npm-run-all --parallel serve watch:*",
-        "serve": "browser-sync start --server --files src/css/*.css, src/img/**/*.{jpg,jpeg,png,svg}, src/js/*.js, *.html"
+        "serve": "browser-sync start --server --files src/css/*.css, src/img/**/*.{jpg,jpeg,png,svg}, src/js/*.js, *.html",
+        "start": "browser-sync start --config bs-config.js"
     },
     "devDependencies": {
         "browser-sync": "^2.27.5",
         "chokidar": "^3.5.2",
         "chokidar-cli": "^2.1.0",
         "concat-glob-cli": "^0.1.0",
+        "hygen": "^6.2.11",
         "mkdirp": "^1.0.4",
         "npm-run-all": "^4.1.5",
         "nunjucks": "^3.2.3",
         "nunjucks-to-html": "^1.0.1",
         "onchange": "^7.1.0",
+        "prettier": "^3.6.2",
         "recursive-fs": "^2.1.0",
         "rollup": "^2.6.1",
         "rollup-plugin-terser": "^7.0.2",
         "sass": "^1.26.5",
         "svg-sprite": "^1.5.3",
         "svgo": "^1.3.2",
-        "prettier": "^3.6.2",
         "uglify-js": "^3.14.2",
-        "hygen": "^6.2.11"
+        "connect-history-api-fallback": "^2.0.0"
     },
     "volta": {
         "node": "22.13.0"
