WIP - Update prototype

--- a/package.json
+++ b/package.json
@@ -13,28 +13,13 @@
     },
     "scripts": {
         "clean": "recursive-delete dist",
-        "copy": "mkdirp -p dist/assets && recursive-copy src/assets/img dist/assets/img && recursive-copy src/assets/icons dist/assets/icons && recursive-copy src/assets/fonts dist/assets/fonts",
-        "scss": "sass --style=compressed --error-css --update src/assets/styles/scss/app.scss dist/assets/css/app.css",
-        "img": "mkdirp -p dist/assets/img && recursive-copy src/assets/img dist/assets/img",
-        "icons": "mkdirp -p dist/assets/icons && recursive-copy src/assets/icons dist/assets/icons",
-        "sprite": "svg-sprite --symbol --log --symbol-sprite=sprite/icons.svg --symbol-dest=src/assets/icons/ src/assets/icons/*.svg",
-        "js": "concat-glob-cli -f src/assets/js/*.js -o src/assets/app.js",
-        "html": "nunjucks-to-html src/*.{njk,html} --config config.nunjucks.js  --dest dist/ --flatten true",
-        "build:css": "npm run scss",
-        "build:js": "npm run js",
-        "build:html": "npm run html",
-        "build:img": "npm run img",
-        "build:icons": "npm run img",
-        "build:sprite": "npm run sprite",
-        "watch:css": "onchange src/assets/styles/scss/**/*.scss -- npm run build:css",
-        "watch:js": "onchange src/assets/js/*.js -- npm run build:js",
-        "watch:html": "onchange src/*.html src/templates/**/*.html -- npm run build:html",
-        "watch:img": "onchange src/assets/img/**/*.{jpg,jpeg,png,svg} -- npm run build:img",
-        "watch:icons": "onchange src/assets/icons/*.{svg} -- npm run build:icons && npm run build:sprite",
+        "copy": "mkdirp -p dist/assets && recursive-copy index.html dist/index.html",
+        "assets": "recursive-copy src/assets/ dist/assets/",
+        "js": "recursive-copy src/js/ dist/js/",
+        "build:assets": "npm run assets",
+        "build:js": "npm run assets",
         "build": "npm-run-all clean copy build:*",
-        "dev": "npm-run-all --parallel serve watch:*",
-        "serve": "browser-sync start --server --files src/css/*.css, src/img/**/*.{jpg,jpeg,png,svg}, src/js/*.js, *.html",
-        "start": "browser-sync start --config bs-config.js"
+        "dev": "browser-sync start --config bs-config.js"
     },
     "devDependencies": {
         "browser-sync": "^2.27.5",
