--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#FFFFFF",
-  "background_color": "#000000",
+  "theme_color": "#111111",
+  "background_color": "#111111",
   "icons": [
     {
       "purpose": "maskable",
@@ -16,8 +16,8 @@
     }
   ],
   "orientation": "any",
-  "display": "fullscreen",
-  "start_url": "/index.html?fullscreen=true",
+  "display": "standalone",
+  "start_url": "/",
   "dir": "auto",
   "lang": "fr",
   "name": "Medic",
